--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thamplate slim",
+  "name": "thamplate",
   "version": "1.0.0",
   "description": "My first gulp using",
   "main": "index.js",
@@ -15,7 +15,8 @@
     "gulp-concat": "^2.6.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.1",
-    "gulp-uglify": "^1.5.3"
+    "gulp-uglify": "^1.5.3",
+    "gulp-sourcemaps": "*"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
