--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "thamplate",
-  "version": "1.0.0",
-  "description": "My first gulp using",
+  "version": "2.0.0",
+  "description": "Web template slim for start project",
   "main": "index.js",
   "dependencies": {
     "gulp": "^3.9.1"
